update deprecated new URL to URI.create